# rag_chatbot_backend

./: .gitignore  .vercel-deploy-trigger  Dockerfile  README.md  docker-compose.yml  start.sh
backend/: .env.example  Dockerfile  Dockerfile.huggingface  README.md  alembic.ini  pyproject.toml  railway.json  requirements.txt
backend/scripts/: ingest_book.py  startup.sh
backend/src/: __init__.py  config.py  main.py
backend/src/agents/: __init__.py  rag_agent.py  translate_agent.py
backend/src/agents/prompts/: rag_system.txt  selected_text.txt  translate.txt
backend/src/api/: __init__.py  auth.py  chat.py  health.py  translate.py
backend/src/db/: __init__.py  database.py
backend/src/middleware/: __init__.py  rate_limit.py
backend/src/models/: __init__.py  conversation.py  message.py  translation.py  user.py
backend/src/schemas/: __init__.py  auth.py  chat.py  translate.py
backend/src/services/: agent_service.py  auth_service.py  embedding_service.py  gemini_client.py  openai_client.py  personalization_service.py  qdrant_client.py  rag_service.py  translation_service.py
backend/src/utils/: __init__.py  logging.py
backend/tests/: __init__.py  conftest.py
backend/tests/contract/: test_chat_contract.py  test_selected_contract.py
backend/tests/integration/: test_auth_endpoint.py  test_chat_endpoint.py  test_selected_text_endpoint.py  test_translate_endpoint.py
backend/tests/unit/: test_auth_service.py  test_personalization.py  test_rag_agent.py  test_rag_service.py  test_selected_text.py  test_translate_agent.py  test_translation_service.py
(+49 files in other folders)
